# elegant-departure

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml  rust.yaml
examples/: async_std.rs  axum.rs  axum_services.rs  hyper.rs  simple.rs  smol.rs  tokio.rs  worker.rs
src/: deplist.rs  lib.rs  registry.rs  signal.rs  tokio.rs
