[package]
name = "elegant-departure"
version = "0.2.0"
authors = ["David Herberth <github@dav1d.de>"]
description = "Utility crate to simplify graceful shutdown"
license = "MIT"
categories = ["asynchronous"]
repository = "https://github.com/Dav1dde/elegant-departure"
edition = "2021"


[dependencies]
lazy_static = "1"
futures = "0.3"
tokio-util = "0.6"
pin-project-lite = "0.2"
tokio = { version = "1", features = ["signal"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["server", "tcp", "http1"] }
async-std = { version = "1", features = ["attributes"] }
smol = "1"
anyhow = "1"
serial_test = "0.5"

[[example]]
name = "simple"

[[example]]
name = "tokio"
required-features = ["tokio"]

[[example]]
name = "hyper"
required-features = ["tokio"]

[[example]]
name = "worker"
required-features = ["tokio"]

[[example]]
name = "smol"

[[example]]
name = "async_std"

# docs.rs-specific configuration
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

