[package]
name = "elegant-departure"
version = "0.3.1"
authors = ["David Herberth <github@dav1d.de>"]
description = "Utility crate to simplify graceful shutdown"
license = "MIT"
categories = ["asynchronous"]
repository = "https://github.com/Dav1dde/elegant-departure"
edition = "2021"
rust-version = "1.80"


[features]
tokio = ["dep:tokio", "dep:futures-util"]

[dependencies]
tokio-util = { version = ">= 0.6, < 0.8", default-features = false }
pin-project-lite = "0.2"
tokio = { version = "1", features = ["signal"], optional = true }
futures-util = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-std = { version = "1", features = ["attributes"] }
smol = "2"
anyhow = "1"
serial_test = "3"
axum = "0.8"

[[example]]
name = "simple"

[[example]]
name = "axum"
required-features = ["tokio"]

[[example]]
name = "axum_services"
required-features = ["tokio"]

[[example]]
name = "tokio"
required-features = ["tokio"]

[[example]]
name = "worker"
required-features = ["tokio"]

[[example]]
name = "smol"

[[example]]
name = "async_std"

# docs.rs-specific configuration
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

